--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -10,7 +10,7 @@ h5,
 h6 {
   @include body-font;
   font-weight: 700;
-  padding-top: 3rem;
+  margin-top: 3rem;
 }
 
 blockquote {
